2010-12-02  Aaron Boodman  <aa@chromium.org>

Reviewed by David Hyatt.

        Reduce the number of cases where we end up with a stale value for
        minimumPreferredLogicalWidth(). This isn't a complete fix, but fixes a
        large number of cases.

        RenderObject::minimumPreferredLogicalWidth() sometimes reports wrong value.
        https://bugs.webkit.org/show_bug.cgi?id=50119

        * rendering/RenderBox.cpp:
        (WebCore::RenderBox::styleDidChange):

Canonical link: https://commits.webkit.org/63670@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73245 268f45cc-cd09-0410-ab3c-d52691b4dbfc